# DelonLoader.LM

./: .gitmodules  MelonLoader.sln  README.md
Bootstrap/: .gitignore  CMakeLists.txt  Core.cpp
Bootstrap/Base/: main.cpp
Bootstrap/Managers/: AndroidData.cpp  AndroidData.h  AssetManagerHelper.cpp  BaseAssembly.cpp  BaseAssembly.h  Game.cpp  Hook.cpp  Hook.h  InternalCalls.cpp  InternalCalls.h  Mono.cpp  Mono.h
Bootstrap/Utils/: AssemblyLoader.cpp  AssemblyLoader.h  AssetHelper.cpp  AssetHelper.h  Encoding.cpp  Encoding.h  JNIManagedInterface.cpp  JNIManagedInterface.h
Bootstrap/Utils/Console/: Logger.cpp  Logger.h
Bootstrap/tools/: cmake_wrapper.sh
DelonLoader Console/DelonLoader Console app Windows/: DelonLoader Console app Windows.sln
DelonLoader Console/DelonLoader Console app Windows/DelonLoader Console app Windows/: DelonLoader Console app Windows.csproj  Program.cs
DelonLoader Console/DelonLoader Console app Windows/DelonLoader Console app Windows/Properties/: AssemblyInfo.cs
DelonLoader Console/DelonLoader Console app android/: DelonLoader Console app avalonia.sln
DelonLoader Console/DelonLoader Console app android/DelonLoader Console app avalonia/: App.axaml  App.axaml.cs
DelonLoader Console/DelonLoader Console app android/DelonLoader Console app avalonia.Android/: DelonLoader Console app avalonia.Android.csproj  MainActivity.cs
DelonLoader Console/DelonLoader Console app android/DelonLoader Console app avalonia/ViewModels/: MainViewModel.cs  ViewModelBase.cs
DelonLoader Console/DelonLoader Console app android/DelonLoader Console app avalonia/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Dependencies/CompatibilityLayers/Demeo/: Demeo.csproj
Dependencies/CompatibilityLayers/IPA/: IPA.csproj
Dependencies/CompatibilityLayers/Il2CppUnityTls/: Il2CppUnityTls.csproj
Dependencies/CompatibilityLayers/Stress_Level_Zero_Il2Cpp/: Stress_Level_Zero_Il2Cpp.csproj
Dependencies/Il2CppAssemblyGenerator/: Il2CppAssemblyGenerator.csproj
Dependencies/MelonStartScreen/: DelonStartScreen.csproj
Dependencies/SupportModules/Il2Cpp/: Il2Cpp.csproj
Dependencies/SupportModules/Mono/: Mono.csproj
JavaBindings/src/com/bhaptics/: package-info.java
JavaBindings/src/com/melonloader/: Bootstrap.java
MelonLoader/: Core.cs  DelonLoader.csproj  MelonLaunchOptions.cs  MelonLoader.csproj  MelonUtils.cs
MelonLoader.NativeHost/: DelonLoader.NativeHost.csproj
MelonLoader/Delon/Anti_Cheat/: AntiCheatPatcher.cs
MelonLoader/Delon/Anti_Cheat/Patchs/: DllCheckerPatch.cs  HydrasPrivAntiCheatPatch.cs  KSHRAntiPatch.cs  QuestLinkPatch.cs  (+2 more)
MelonLoader/Fixes/: DateTimeOverride.cs  LemonCrashFixes.cs
MelonLoader/Melons/: MelonHandler.cs
MelonLoader/Preferences/: MelonPreferences_Entry.cs
MelonLoader/Properties/: BuildInfo.cs
MelonLoader/Resources/: i am a very frieendly fellow.mov
MelonLoader/Utils/: NativeLibrary.cs
MelonLoader/anti-cheat patchs/: DllCheckerPatch.cs  KSHRAntiPatch.cs  QuestLinkPatch.cs  SignatureCheckPatch.cs  UnitysAntiCheatPatch.cs
console hook/: Core.cs  NetworkHander.cs  console hook broken.csproj
console hook working/: console hook not working to.csproj  console.cs
console hook working/Properties/: AssemblyInfo.cs
console hook/Properties/: AssemblyInfo.cs
from v1/: AntiCheatPatcher.cs
from v1/anti-cheat patchs/: DllCheckerPatch.cs  HydrasPrivAntiCheatPatch.cs  KSHRAntiPatch.cs  QuestLinkPatch.cs
libmain/: Cargo.toml  build.bat
libmain/src/: lib.rs  nativeloader.rs
libmain/src/utils/: libs.rs
tools/: generate_installer_deps.ps1
(+6 files in other folders)
